--- a/GuildfordBoroughCouncil.ActiveDirectory.Api/GuildfordBoroughCouncil.ActiveDirectory.Api.csproj
+++ b/GuildfordBoroughCouncil.ActiveDirectory.Api/GuildfordBoroughCouncil.ActiveDirectory.Api.csproj
@@ -34,16 +34,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\GuildfordBoroughCouncil.ActiveDirectory.1.1.0\lib\net45\GuildfordBoroughCouncil.ActiveDirectory.dll</HintPath>
     </Reference>
-    <Reference Include="GuildfordBoroughCouncil.Linq">
-      <HintPath>..\packages\GuildfordBoroughCouncil.Linq.1.1.0\lib\net45\GuildfordBoroughCouncil.Linq.dll</HintPath>
+    <Reference Include="GuildfordBoroughCouncil.Linq, Version=1.2.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\GuildfordBoroughCouncil.Linq.1.2.6\lib\net45\GuildfordBoroughCouncil.Linq.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
